force-app/main/default/objects/Cross_Sell_Product__c/Cross_Sell_Product__c.object-meta.xml
<CustomObject>
    <label>Cross Sell Product</label>
    <nameField>
        <displayFormat>CSP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Sell Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>