force-app/main/default/objects/Cross_Sell_Product__c/fields/CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CampaignMemberId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>