force-app/main/default/objects/Cross_Sell_Product__c/fields/Corebank_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch / Team / AO Group Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>