force-app/main/default/objects/Cross_Sell_Product__c/fields/Corebank_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Branch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch / Team / AO Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>