force-app/main/default/objects/Cross_Sell_Product__c/fields/Corebank_Emp_Name__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Emp_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>