force-app/main/default/objects/Cross_Sell_Product__c/fields/Corebank_Emp_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Emp_Phone_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Phone No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>