force-app/main/default/objects/Cross_Sell_Product__c/fields/Corebank_Sales_Manager_Head__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Sales_Manager_Head__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AL Group Head Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>