force-app/main/default/objects/Cross_Sell_Product__c/fields/Corebank_Sales_Manager_Head_Id__c.field-meta.xml
<CustomField>
    <fullName>Corebank_Sales_Manager_Head_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AL Group Head ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>