force-app/main/default/objects/Cross_Sell_Product__c/fields/Details_of_Status__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details of Status</label>
    <type>TextArea</type>
</CustomField>