force-app/main/default/objects/Cross_Sell_Product__c/fields/HPAP_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>HPAP_Reason_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HPAP Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>