force-app/main/default/objects/Cross_Sell_Product__c/fields/HPAP_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>HPAP_Status_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HPAP Status Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>