force-app/main/default/objects/Cross_Sell_Product__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cross Sell Products</relationshipLabel>
    <relationshipName>Cross_Sell_Products</relationshipName>
    <type>Lookup</type>
</CustomField>