force-app/main/default/objects/Cross_Sell_Product__c/fields/ReferralID__c.field-meta.xml
<CustomField>
    <fullName>ReferralID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral ID</label>
    <referenceTo>RTL_Referral__c</referenceTo>
    <relationshipLabel>Cross Sell Products</relationshipLabel>
    <relationshipName>Cross_Sell_Products</relationshipName>
    <type>Lookup</type>
</CustomField>