force-app/main/default/objects/Cross_Sell_Product__c/fields/RTL_AL_Req_No1__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Req_No1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>req_no1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>