force-app/main/default/objects/Cross_Sell_Product__c/fields/RTL_OfferResult_Product__c.field-meta.xml
<CustomField>
    <fullName>RTL_OfferResult_Product__c</fullName>
    <label>Offer Result for Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>