force-app/main/default/objects/Cross_Sell_Product__c/fields/RTL_Reason__c.field-meta.xml
<CustomField>
    <fullName>RTL_Reason__c</fullName>
    <label>Reason of Not Interested</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business partner -reputation / bad experience</fullName>
            </value>
            <value>
                <fullName>Product - Benefits,Credit Limit,Protection</fullName>
            </value>
            <value>
                <fullName>Product - Policy</fullName>
            </value>
            <value>
                <fullName>Product - Not attractive Return, Interest, NAV, Dividend</fullName>
            </value>
            <value>
                <fullName>Product - Too high Fee, Interest, or BA premium</fullName>
            </value>
            <value>
                <fullName>Process - Complicated application &amp; approval</fullName>
            </value>
            <value>
                <fullName>Channel - inconvenient</fullName>
            </value>
            <value>
                <fullName>Marketing - NOT attractive promotion</fullName>
            </value>
            <value>
                <fullName>Disqualif. - Bank condition/policy</fullName>
            </value>
            <value>
                <fullName>CM - Refuse since beginning</fullName>
            </value>
            <value>
                <fullName>CM - Adequate product holding</fullName>
            </value>
            <value>
                <fullName>CM - No purchasing power</fullName>
            </value>
            <value>
                <fullName>CM - risk concern</fullName>
            </value>
            <value>
                <fullName>CM - Bad experience with Product</fullName>
            </value>
            <value>
                <fullName>CM - online security concerns</fullName>
            </value>
            <value>
                <fullName>TMB - reputation concern</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>