force-app/main/default/objects/Cross_Sell_Product__c/fields/RTL_Stage__c.field-meta.xml
<CustomField>
    <fullName>RTL_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Sales (Auto Loan)</fullName>
            </value>
            <value>
                <fullName>Submit App</fullName>
            </value>
            <value>
                <fullName>App In</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Closed Won (Auto Loan)</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed By AL System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>